# boardgame-helper-bot

./: .gitignore  Dockerfile  LICENSE  README.md  bgg.py  bot.py  codenames.py  dockerfile  embeds.py  meetup.py  music.py  pyproject.toml  requirements.txt  store.py  utils.py  views.py
.devcontainer/: devcontainer.json
store/: __init__.py  local.py  mem.py
views/: __init__.py  base.py  choose.py  join.py  list_view.py  settings.py
