[project]
name = "boardgame-helper-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boardgamegeek2>=1.0.1",
    "discord-py>=2.4.0",
    "environs>=14.1.0",
    "requests-cache==0.5.2",
    "setuptools>=75.8.0",
]
