[project]
name = "boardgame-helper-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boardgamegeek2>=1.0.1",
    "cashews>=7.4.0",
    "colorlog>=6.9.0",
    "discord-py>=2.5.0",
    "diskcache>=5.6.3",
    "environs>=14.1.0",
    "nanoid>=2.0.0",
    "requests-cache==0.5.2",
    "setuptools>=75.8.0",
]
